--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "debug": "^3.1.0",
+    "gsap": "^1.20.3",
     "phoenix": "^1.3.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
