--- a/package.json
+++ b/package.json
@@ -15,13 +15,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.17.1",
     "debug": "^3.1.0",
     "gsap": "^1.20.3",
-    "phoenix": "^1.3.0",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
