--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,44 +59,49 @@ jobs:
         - v1-dep-develop-
         # Any branch if there are none on the default branch - this should be unnecessary if you have your default branch configured correctly
         - v1-dep-
-    # This is based on your 1.0 configuration file or project settings
+
     - run: go get -v github.com/bep/s3deploy
-    # This is based on your 1.0 configuration file or project settings
-    - run: yarn
-    # Save dependency cache
+
     - save_cache:
-        key: v1-dep-{{ .Branch }}-{{ epoch }}
+        key: v1-dep-go-{{ .Branch }}-{{ epoch }}
         paths:
-        # This is a broad list of cache paths to include many possible development environments
-        # You can probably delete some of these entries
-        - vendor/bundle
-        - ~/virtualenvs
-        - ~/.m2
-        - ~/.ivy2
-        - ~/.bundle
         - ~/.go_workspace
-        - ~/.gradle
-        - ~/.cache/bower
-        # These cache paths were specified in the 1.0 config
-        - ~/.cache/yarn
-        - bin
+
+    - run: yarn
+
+    - save_cache:
+        key: v1-dep-yarn-{{ .Branch }}-{{ epoch }}
+        paths:
         - ./node_modules
-    # Test
-    #   This would typically be a build job when using workflows, possibly combined with build
-    # This is based on your 1.0 configuration file or project settings
+
     - run: yarn run build
-    # Deployment
-    # Your existing circle.yml file contains deployment steps.
-    # The config translation tool does not support translating deployment steps
-    # since deployment in CircleCI 2.0 are better handled through workflows.
-    # See the documentation for more information https://circleci.com/docs/2.0/workflows/
-    # Teardown
-    #   If you break your build into multiple jobs with workflows, you will probably want to do the parts of this that are relevant in each
-    # Save test results
+
     - store_test_results:
         path: /tmp/circleci-test-results
-    # Save artifacts
     - store_artifacts:
         path: /tmp/circleci-artifacts
     - store_artifacts:
         path: /tmp/circleci-test-results
+
+  deploy:
+    machine:
+        enabled: true
+    working_directory: ~/rossta/connect-four-vue
+    steps:
+      - checkout
+      - run:
+          name: Deploy to S3
+          command: |
+            s3deploy -source=dist/ -region=us-west-2 -bucket=rossta-connect-four
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
